[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tower = "0.4.13"
tower-http = "0.3.5"
hyper = "0.14.23"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
