[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-axum = "5.0.4"
axum = "0.6.1"
hyper = "0.14.23"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = "0.3.5"
sea-orm = "0.10.6"
entity = { path = "../entity" }
